--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
 
+
+.body-class{
+    font-family: Roboto;
+}
+
+
+
+.build {
+    margin: 0 auto;
+    text-align: center; 
+}
 
 header {
     background-color: rgb(32,101,136);
     padding-top: 12px;
-    padding-left: 12px; 
+    padding-left: 12px;
+    width: auto;
+    height: 800px; 
 }
 
-header img{
+.npm-logo{
     height: 30px; 
     float:left;
     padding-right: 10px; 
 }
+
+.bear-pic {
+    height: 30px; 
+    float:left;
+    padding-right: 10px;
+    padding-left: 2px;
+    padding-top: 3px;  
+}
+
+img .scape {
+    display: block;
+    margin: 0 auto; 
+    float: right;
+}
+
 
 nav {
     background-color: #C12127;
@@ -18,7 +47,7 @@ nav {
     padding-top: 10px;
     padding-bottom: 12px; 
     height: 12px;
-    font-size: 14px;    
+    font-size: 12px;    
 }
 
 nav a{
@@ -27,15 +56,16 @@ nav a{
 }
 
 .nav-bar {
-    padding-left: 12px; 
+    padding-left: 12px;
 }
 
 .profile-links{    
     float: right;
-    margin-top: 0px;
+    margin-top: 3px;
     display: flex;
     margin-right: 10px;
-    font-size: 14px; 
+    font-size: 13px;
+    
 
 }
 
@@ -50,23 +80,25 @@ nav a{
 }
 
 .searchterm {
-    width: 78%;
-    padding: 6px 0; 
+    width: 77%;
+    padding: 6px; 
     line-height: 19px;
-    border: 2px solid #436E8F;
+    border: 1px solid #436E8F;
     background-color: #1F5370;
     color: #6A7A89;
-    border-right: none; 
+    border-right: none;
+    font-size: 13px;
+    text-align: left; 
     
 }
 
 .search-button{
     width: 35px;
-    height: 35px;
+    height: 33px;
     padding-top: 1px;
     padding-left: 5px;
     text-align: center; 
-    border: 2px solid #436E8F;
+    border: 1px solid #436E8F;
     background-color:  #1F5370;
     color: white; 
     cursor: pointer;
@@ -96,6 +128,8 @@ nav a{
 }
 
 
-
+.city-scape-img{
+    position: absolute; 
+}
 
 
